name:                tracer
version:             0.1.0.0
-- synopsis:
-- description:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     V3
                     , Tracer
  build-depends:       base >= 4.7 && < 5
                     , vector-space
                     , transformers
                     , array
  default-language:    Haskell2010

executable tracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tracer
                     , transformers
                     , array
  default-language:    Haskell2010
